<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:weightSum="1"
    android:background="@color/colorAccent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="159dp"
            android:layout_height="164dp"

            android:layout_centerInParent="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp"


            >


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_username"
                android:theme="@style/EditTextWhite"

                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:theme="@style/EditTextWhite"
                android:layout_marginVertical="20dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/text_btn_login"
                android:onClick="onLogin"
                android:theme="@style/RaisedButtonDark"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >


                <TextView
                    android:id="@+id/dontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/editTextColorWhite"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="10dp"
                    />

                <TextView
                    android:id="@+id/createHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_toEndOf="@+id/dontHaveAccount"
                    android:onClick="goCreateAccount"
                    android:text="@string/create_Here"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>